services/writer/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harporis-writer
  labels:
    app: harporis-writer
spec:
  clusterIP: None
  selector:
    app: harporis-writer
  ports:
    - name: metrics
      port: 9102
      targetPort: metrics
